# TEB

./: .gitignore  .gitmodules  Complex_Appliances.py  LICENSE  README.md  Thermodynamics.py  Tiered_BuildingEnergy_Demand_Load_Model.py  docker-compose.yml  pyproject.toml  test_Tiered_BuildingEnergy_Demand_Load_Model.py
LoadData/: TieredLoads_Template.xlsx  TieredLoads_Testing2.xlsx
docs/source/: conf.py  index.rst
src/TEB/: __init__.py
src/TEB/application/: app.py
src/TEB/database/: __init__.py  sqli3.py
src/TEB/simulation/: thermodynamics.py
src/TEB/simulator/: __init__.py  complex_appliances.py  sim.py
tests/: test_Tiered_BuildingEnergy_Demand_Load_Model.py  test_dashboard.py  test_database.py
tests/ExcelLoadData/: TieredLoads_Template.xlsx  TieredLoads_Testing2.xlsx
