[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electrical_load_dashboard"
version = "0.1.0"
description = "A dashboard for managing electrical loads."
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "dash",
    "pandas",
    "plotly"
]

[tool.sphinx]
source = "docs"

