[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TEB"
version = "0.0.1b0"
description = "Tiered Energy in Buildings with a dashboard for building electric loads, running the simulation, and visualizing the results."
authors = [{name = "Daniel L. Villa", email = "dlvilla@sandia.gov"}]
dependencies = [
    "dash",
    "pandas",
    "openpyxl",
    "plotly",
    "rcbsim"
]
[project.optional-dependencies]
    test = ["pytest","pytest-cov","statsmodels","scikit-learn"]
    pylint = ["pylint"]
    docs = ["sphinx"]

[tool.sphinx]
source = "docs"

